[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/camp/campfire_wood_32x18.png" type="Texture" id=1]
[ext_resource path="res://assets/other/2DLight.png" type="Texture" id=2]
[ext_resource path="res://props/campfire/campfire.gd" type="Script" id=3]
[ext_resource path="res://assets/camp/campfire_icon_32x32.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/items/material/stick.png" type="Texture" id=6]
[ext_resource path="res://assets/items/material/blade_of_grass.png" type="Texture" id=7]
[ext_resource path="res://assets/items/meat/rabbit_meat.png" type="Texture" id=8]
[ext_resource path="res://assets/items/material/snowball.png" type="Texture" id=9]
[ext_resource path="res://assets/items/food/water_bottle.png" type="Texture" id=10]
[ext_resource path="res://assets/items/material/empty_bottle.png" type="Texture" id=11]
[ext_resource path="res://assets/items/food/roast_rabbit.png" type="Texture" id=12]
[ext_resource path="res://assets/items/meat/wolf_meat.png" type="Texture" id=13]
[ext_resource path="res://assets/items/food/roast_venison.png" type="Texture" id=14]
[ext_resource path="res://assets/items/meat/venison.png" type="Texture" id=15]
[ext_resource path="res://assets/items/food/grilled_wolf_meat.png" type="Texture" id=16]
[ext_resource path="res://props/campfire/food_processing.gd" type="Script" id=17]
[ext_resource path="res://assets/other/white_circle_32x32.png" type="Texture" id=18]

[sub_resource type="CircleShape2D" id=1]
radius = 30.6834

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.493182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 )
colors = PoolColorArray( 0.196078, 0.196078, 0.196078, 0.0784314, 0.666667, 0.666667, 0.666667, 0.431373, 0.556863, 0.556863, 0.556863, 0.54902, 0.607843, 0.607843, 0.607843, 0.627451, 0.65098, 0.65098, 0.65098, 0.54902, 0.505882, 0.505882, 0.505882, 0.470588 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -1.77013, 0, 0, Vector2( 1, 0.468182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.15, 0.5, 0.7, 0.9, 1 )
colors = PoolColorArray( 0.901961, 0.156863, 0.0392157, 1, 0.941176, 0.196078, 0.0196078, 0.784314, 1, 0.803922, 0.333333, 0.705882, 0.901961, 0.298039, 0.0588235, 1, 1, 0.0980392, 0.0392157, 0.54902, 0.156863, 0.0784314, 0.0784314, 0.27451 )

[sub_resource type="Curve" id=6]
min_value = -2.0
max_value = 2.0
_data = [ Vector2( 0, 0.127273 ), 0.0, 0.0, 0, 0, Vector2( 0.241379, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.758621, -0.418182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0545456 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 )
colors = PoolColorArray( 1, 0.823529, 0.333333, 0.27451, 1, 0.509804, 0.156863, 0.745098, 0.901961, 0.313726, 0.0588235, 1, 0.823529, 0.156863, 0.00392157, 0.784314, 0.823529, 0.117647, 0.0196078, 0.745098, 0.156863, 0.0784314, 0.0784314, 0.196078 )

[sub_resource type="CircleShape2D" id=8]
radius = 42.0

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="DynamicFont" id=12]
size = 20
extra_spacing_top = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0980392, 0.196078, 0.0784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.341176, 0.133333, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_top = 40
border_color = Color( 0.945098, 0.819608, 0.270588, 1 )

[sub_resource type="DynamicFont" id=18]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=21]
size = 20
font_data = ExtResource( 5 )

[node name="campfire" type="Node2D"]
script = ExtResource( 3 )

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( -5.68434e-14, 4 )
scale = Vector2( 1.25, 0.453125 )
texture = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="campfire" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="campfire"]
shape = SubResource( 1 )

[node name="fire" type="Node2D" parent="."]
visible = false

[node name="CPUParticles2D3" type="CPUParticles2D" parent="fire"]
amount = 30
lifetime = 2.0
preprocess = 30.0
speed_scale = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2( 0, -30 )
orbit_velocity = -0.2
orbit_velocity_random = 1.0
scale_amount = 10.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="fire"]
amount = 40
lifetime = 0.6
emission_shape = 1
emission_sphere_radius = 7.0
spread = 180.0
gravity = Vector2( 0, -30 )
orbit_velocity = -0.42
orbit_velocity_random = 1.0
scale_amount = 5.0
scale_amount_random = 0.3
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="fire"]
position = Vector2( 0, -3 )
amount = 15
speed_scale = 0.7
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, -30 )
orbit_velocity = -0.2
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 6 )
scale_amount = 3.0
scale_amount_random = 0.3
color_ramp = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 2 )
texture_scale = 2.0
color = Color( 0.952941, 0.580392, 0.184314, 1 )
energy = 0.7
shadow_enabled = true

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
self_modulate = Color( 0.301961, 0.027451, 0.52549, 0.352941 )
shape = SubResource( 8 )

[node name="gui" type="CanvasLayer" parent="."]
layer = 3

[node name="head_dialogue" type="Node2D" parent="."]
material = SubResource( 9 )
z_index = 20

[node name="light_a_fire" type="Button" parent="head_dialogue"]
visible = false
use_parent_material = true
margin_left = -56.0
margin_top = -150.0
margin_right = 56.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 10 )
text = "จุดไฟ"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_require" type="Node2D" parent="head_dialogue/light_a_fire"]
use_parent_material = true

[node name="Panel" type="Panel" parent="head_dialogue/light_a_fire/item_require"]
self_modulate = Color( 1, 1, 1, 0.784314 )
use_parent_material = true
margin_left = -40.0
margin_top = -128.0
margin_right = 152.0
margin_bottom = -24.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="head_dialogue/light_a_fire/item_require/Panel"]
use_parent_material = true
margin_right = 192.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 12 )
text = "ไอเทมที่ต้องการ"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stick_require" type="Panel" parent="head_dialogue/light_a_fire/item_require/Panel"]
use_parent_material = true
margin_left = 16.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stick" type="Sprite" parent="head_dialogue/light_a_fire/item_require/Panel/stick_require"]
use_parent_material = true
position = Vector2( 32, 32 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="head_dialogue/light_a_fire/item_require/Panel/stick_require"]
use_parent_material = true
margin_left = 36.0
margin_top = 48.0
margin_right = 62.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 14 )
text = "x10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blade_of_grass_require" type="Panel" parent="head_dialogue/light_a_fire/item_require/Panel"]
use_parent_material = true
margin_left = 112.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blade_of_grass" type="Sprite" parent="head_dialogue/light_a_fire/item_require/Panel/blade_of_grass_require"]
use_parent_material = true
position = Vector2( 32, 32 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="head_dialogue/light_a_fire/item_require/Panel/blade_of_grass_require"]
use_parent_material = true
margin_left = 38.0
margin_top = 48.0
margin_right = 62.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 16 )
text = "x10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food_processing" type="Panel" parent="head_dialogue"]
visible = false
use_parent_material = true
margin_left = 42.0
margin_top = -206.0
margin_right = 456.0
margin_bottom = 206.0
custom_styles/panel = SubResource( 17 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="head_dialogue/food_processing"]
margin_right = 414.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "แปรรูป"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="head_dialogue/food_processing"]
use_parent_material = true
margin_left = 26.0
margin_top = 52.0
margin_right = 400.0
margin_bottom = 404.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="head_dialogue/food_processing/ScrollContainer"]
use_parent_material = true
margin_right = 364.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="processing_0" type="Panel" parent="head_dialogue/food_processing/ScrollContainer/GridContainer"]
use_parent_material = true
margin_right = 364.0
margin_bottom = 82.0
rect_min_size = Vector2( 364, 82 )
custom_styles/panel = SubResource( 19 )

[node name="itm_req_0" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
position = Vector2( 44, 42 )
texture = ExtResource( 9 )

[node name="itm_req_1" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
position = Vector2( 140, 42 )
texture = ExtResource( 11 )

[node name="plus" type="Label" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
margin_left = 82.0
margin_top = 32.0
margin_right = 101.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 20 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equal" type="Label" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
margin_left = 186.0
margin_top = 32.0
margin_right = 205.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 20 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_reward" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
position = Vector2( 246, 42 )
texture = ExtResource( 10 )

[node name="processing_0_button" type="Button" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0"]
use_parent_material = true
margin_left = 294.0
margin_top = 24.0
margin_right = 354.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 21 )
text = "แปรรูป"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="processing_1" type="Panel" parent="head_dialogue/food_processing/ScrollContainer/GridContainer"]
use_parent_material = true
margin_top = 86.0
margin_right = 364.0
margin_bottom = 168.0
rect_min_size = Vector2( 364, 82 )
custom_styles/panel = SubResource( 19 )

[node name="itm_req_0" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_1"]
use_parent_material = true
position = Vector2( 44, 40 )
texture = ExtResource( 13 )

[node name="equal" type="Label" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_1"]
use_parent_material = true
margin_left = 108.0
margin_top = 30.0
margin_right = 127.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 20 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_reward" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_1"]
use_parent_material = true
position = Vector2( 176, 40 )
texture = ExtResource( 16 )

[node name="processing_1_button" type="Button" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_1"]
use_parent_material = true
margin_left = 294.0
margin_top = 20.0
margin_right = 354.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 21 )
text = "แปรรูป"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="processing_2" type="Panel" parent="head_dialogue/food_processing/ScrollContainer/GridContainer"]
use_parent_material = true
margin_top = 172.0
margin_right = 364.0
margin_bottom = 254.0
rect_min_size = Vector2( 364, 82 )
custom_styles/panel = SubResource( 19 )

[node name="itm_req_0" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_2"]
use_parent_material = true
position = Vector2( 44, 40 )
texture = ExtResource( 15 )

[node name="equal" type="Label" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_2"]
use_parent_material = true
margin_left = 106.0
margin_top = 32.0
margin_right = 125.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 20 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_reward" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_2"]
use_parent_material = true
position = Vector2( 176, 40 )
texture = ExtResource( 14 )

[node name="processing_2_button" type="Button" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_2"]
use_parent_material = true
margin_left = 294.0
margin_top = 24.0
margin_right = 354.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 21 )
text = "แปรรูป"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="processing_3" type="Panel" parent="head_dialogue/food_processing/ScrollContainer/GridContainer"]
use_parent_material = true
margin_top = 258.0
margin_right = 364.0
margin_bottom = 340.0
rect_min_size = Vector2( 364, 82 )
custom_styles/panel = SubResource( 19 )

[node name="itm_req_0" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_3"]
use_parent_material = true
position = Vector2( 44, 40 )
texture = ExtResource( 8 )

[node name="equal" type="Label" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_3"]
use_parent_material = true
margin_left = 108.0
margin_top = 30.0
margin_right = 127.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 20 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_reward" type="Sprite" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_3"]
use_parent_material = true
position = Vector2( 176, 40 )
texture = ExtResource( 12 )

[node name="processing_3_button" type="Button" parent="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_3"]
use_parent_material = true
margin_left = 294.0
margin_top = 22.0
margin_right = 354.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 21 )
text = "แปรรูป"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="pressed" from="head_dialogue/light_a_fire" to="." method="_on_light_a_fire_pressed"]
[connection signal="pressed" from="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_0/processing_0_button" to="head_dialogue/food_processing" method="_on_processing_0_button_pressed"]
[connection signal="pressed" from="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_1/processing_1_button" to="head_dialogue/food_processing" method="_on_processing_1_button_pressed"]
[connection signal="pressed" from="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_2/processing_2_button" to="head_dialogue/food_processing" method="_on_processing_2_button_pressed"]
[connection signal="pressed" from="head_dialogue/food_processing/ScrollContainer/GridContainer/processing_3/processing_3_button" to="head_dialogue/food_processing" method="_on_processing_3_button_pressed"]
